--- a/package.xml
+++ b/package.xml
@@ -41,14 +41,15 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   
-  <build_depend>log4cxx</build_depend>
   <build_depend>roscpp</build_depend>  
   <build_depend>message_generation</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>xpp_controller</build_depend>
+  <build_depend>xpp_msgs</build_depend>
   <build_depend>hyq_inverse_kinematics</build_depend>
   
+  <run_depend>xpp_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
