--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,6 +92,7 @@ set(SOURCES
   src/qp_facade.cc
   src/spliner.cc
   src/spliner_3d.cc
+  src/polynomial_fifth_order.cc
   src/zero_moment_point.cc
   src/motion_structure.cc
   src/step_sequence_planner.cc
