--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,7 +90,7 @@ include_directories(
 set(SOURCES
   src/ellipse.cc
   src/qp_facade.cc
-  src/spliner.cc
+  src/polynomial.cc
   src/zero_moment_point.cc
   src/motion_structure.cc
   src/step_sequence_planner.cc
@@ -239,7 +239,7 @@ if(BUILD_TESTS)
                          test/google/motion_structure_test.cc
 #                        test/google/com_motion_test.cc
                          test/google/com_spline_test.cc
-                         test/google/spliner_test.cc
+                         test/google/polynomial_test.cc
 #                        test/google/spline_container_test.cc
                          test/google/motion_factory_test.cc
 #                        #constraints
