--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   geometry_msgs
   message_generation
-  rviz_visual_tools   # used in nlp_user_input.cc to delete all rviz markers
+  #rviz_visual_tools   # used in nlp_user_input.cc to delete all rviz markers
   xpp_msgs            # defines the state to talk to the controller
 )
 
