visualization of hyq state in rviz working

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   geometry_msgs
   message_generation
+  hyq_inverse_kinematics #inv_kin remove this
+  hyqb_msgs
   #rviz_visual_tools   # used in nlp_user_input.cc to delete all rviz markers
   xpp_msgs            # defines the state to talk to the controller
 )
