moved common code to xpp_common

--- a/package.xml
+++ b/package.xml
@@ -42,6 +42,9 @@
   <buildtool_depend>catkin</buildtool_depend>
   
   <build_depend>xpp_msgs</build_depend>
+  
+  <build_depend>xpp_common</build_depend>
+  <run_depend>xpp_common</run_depend>
 
   
 </package>
