--- a/package.xml
+++ b/package.xml
@@ -41,7 +41,8 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   
-  <build_depend>xpp_msgs</build_depend>
+  <build_depend>kindr</build_depend>
+  <run_depend>kindr</run_depend>
   
   <build_depend>xpp_common</build_depend>
   <run_depend>xpp_common</run_depend>
