--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -142,28 +142,28 @@ if(BUILD_TESTS)
     set(MY_GTEST_UNITS  test/google/gtest_main.cc 
 #                        test/google/spliner_test.cc
                          test/google/point2d_manipulations_test.cc
-             #            test/google/supp_polygon_test.cc
-             #            test/google/supp_polygon_container_test.cc
-            #             test/google/helpers.cc
+                         test/google/supp_polygon_test.cc
+                         test/google/supp_polygon_container_test.cc
+                         test/google/helpers.cc
 #                        test/google/zero_moment_point_test.cc
 ##                        test/google/hyq_spliner_test.cc
 #                        test/google/optimization_variables_test.cc
 #                        test/google/nlp_observer_test.cc
 #                        test/google/optimization_visualizer_test.cc
 #                        test/google/step_sequence_planner_test.cc
-           #              test/google/line_equation_test.cc
+                         test/google/line_equation_test.cc
                          # hyq
 #                        # com
-          #               test/google/motion_structure_test.cc
+                         test/google/motion_structure_test.cc
 #                        test/google/com_motion_test.cc
-         #                test/google/com_spline_test.cc
-         #                test/google/polynomial_test.cc
+                         test/google/com_spline_test.cc
+                         test/google/polynomial_test.cc
 #                        test/google/spline_container_test.cc
 #                        #constraints
 #                        test/google/zmp_constraint_test.cc
 #                        test/google/constraint_factory_test.cc
-         #                test/google/zmp_constraint_builder_test.cc
-   #                      test/google/linear_spline_equations_test.cc
+                         test/google/zmp_constraint_builder_test.cc
+                         test/google/linear_spline_equations_test.cc
 #                        test/google/joint_angles_constraint_test.cc
 #                        test/google/constraint_container_test.cc
 #                        test/google/range_of_motion_constraint_test.cc
