--- a/package.xml
+++ b/package.xml
@@ -43,7 +43,11 @@
   
   <build_depend>xpp_opt</build_depend>
   <build_depend>xpp_msgs</build_depend>
+  <build_depend>keyboard</build_depend>
+  <build_depend>joy</build_depend>
   
+  <build_depend>joy</build_depend>
+  <run_depend>keyboard</run_depend>
   <run_depend>xpp_opt</run_depend>
   <run_depend>xpp_msgs</run_depend>
 
