--- a/package.xml
+++ b/package.xml
@@ -42,14 +42,14 @@
   <buildtool_depend>catkin</buildtool_depend>
   
   <build_depend>xpp_opt</build_depend>
-  <build_depend>xpp_msgs</build_depend>
+  <build_depend>xpp_conversions</build_depend>
   <build_depend>keyboard</build_depend>
   <build_depend>joy</build_depend>
   
   <build_depend>joy</build_depend>
   <run_depend>keyboard</run_depend>
   <run_depend>xpp_opt</run_depend>
-  <run_depend>xpp_msgs</run_depend>
+  <run_depend>xpp_conversions</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
