added skeleton dynamic constraint (zmp convex hull)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,6 +116,7 @@ set(SOURCES
   src/zmp_constraint.cc
   src/range_of_motion_constraint.cc
   src/obstacle_constraint.cc
+  src/dynamic_constraint.cc
   # costs
   src/a_cost.cc
   src/a_spline_cost.cc
