Added dynamic constraint base on LIP-model

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -119,6 +119,7 @@ set(SOURCES
   src/obstacle_constraint.cc
   src/support_area_constraint.cc
   src/convexity_constraint.cc
+  src/dynamic_constraint.cc
   # costs
   src/a_cost.cc
   src/a_spline_cost.cc
@@ -178,6 +179,7 @@ if(BUILD_TESTS)
 #                        test/google/constraint_factory_test.cc
                          test/google/zmp_constraint_builder_test.cc
                          test/google/linear_spline_equations_test.cc
+                         test/google/dynamic_constraint_test.cc
 #                        test/google/joint_angles_constraint_test.cc
 #                        test/google/constraint_container_test.cc
 #                        test/google/range_of_motion_constraint_test.cc
