simplified convexity constraint

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -119,6 +119,7 @@ set(SOURCES
   src/obstacle_constraint.cc
   src/support_area_constraint.cc
   src/convexity_constraint.cc
+  src/polygon_center_constraint.cc
   src/dynamic_constraint.cc
   # costs
   src/a_cost.cc
