--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ find_package(GTest)
 # NLP solvers (adapt global path accordingly)
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
 find_package(IPOPT REQUIRED)
-option(BUILD_SNOPT "Build problem to solve with snopt nlp solver" OFF)
+option(BUILD_SNOPT "Build problem to solve with snopt nlp solver" ON)
 if(BUILD_SNOPT)
   set(SNOPT_SRC_DIR "/home/winklera/3rd_party_software/snopt_lib")
   set(SNOPT_INCLUDE_DIRS ${SNOPT_SRC_DIR}/include)
