extracted hyq specific joint mapping from spliner

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,6 +88,7 @@ set(SOURCES
   src/step_sequence_planner.cc
   src/hyq_spliner.cc
   src/hyq_robot_interface.cc
+  src/hyq_joint_mapper.cc
   # com
   src/com_motion.cc
   src/com_spline.cc
