renamed hyq_spliner and moved to hyq independent namespace/folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,7 +86,7 @@ set(SOURCES
   src/a_robot_interface.cc
   # hyq
   src/step_sequence_planner.cc
-  src/hyq_spliner.cc
+  src/wb_traj_generator.cc
   src/hyq_robot_interface.cc
   src/hyq_joint_mapper.cc
   # com
