--- a/package.xml
+++ b/package.xml
@@ -45,11 +45,13 @@
   <build_depend>xpp_conversions</build_depend>
   <build_depend>keyboard</build_depend>
   <build_depend>joy</build_depend>
+  <build_depend>xpp_hyq</build_depend>
   
   <build_depend>joy</build_depend>
   <run_depend>keyboard</run_depend>
   <run_depend>xpp_opt</run_depend>
   <run_depend>xpp_conversions</run_depend>
+  <run_depend>xpp_hyq</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
