--- a/package.xml
+++ b/package.xml
@@ -44,11 +44,7 @@
   <build_depend>kindr</build_depend>
   <run_depend>kindr</run_depend>
   
-  <build_depend>xpp_common</build_depend>
-  <run_depend>xpp_common</run_depend>
-  
-  <build_depend>xpp_hyq</build_depend>
-  <run_depend>xpp_hyq</run_depend>
-
-  
+  <build_depend>xpp_states</build_depend>
+  <run_depend>xpp_states</run_depend>
+    
 </package>
