added generic endeffector motion parametrization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -125,6 +125,7 @@ add_library(${MOTION_OPT_LIB}
   src/motion_phase.cc
   src/ee_swing_motion.cc
   src/ee_motion.cc
+  src/endeffectors_motion.cc
   # constraints and costs
   src/cost_constraint_factory.cc
   src/linear_spline_equality_constraint.cc
