--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,6 +127,8 @@ add_library(${MOTION_OPT_LIB}
   src/ee_motion.cc
   src/endeffectors_motion.cc
   src/endeffector_load.cc
+  # Input
+  src/center_of_pressure.cc
   # constraints and costs
   src/cost_constraint_factory.cc
   src/linear_spline_equality_constraint.cc
