removed the "Xpp" from Endeffector template typedefs.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,6 +96,7 @@ add_library(${MOTION_OPT_LIB}
   src/ee_motion.cc
   src/endeffectors_motion.cc
   src/endeffector_load.cc
+  src/contact_motion.cc
   # Input
   src/center_of_pressure.cc
   # constraints and costs
