greatly reduced interface of com_spline and fixed bug in MakeJuntionConstraint()

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,7 +76,6 @@ add_library(${MOTION_OPT_LIB}
   src/base_motion.cc
   src/com_polynomial_helpers.cc
   src/com_spline.cc
-  src/com_spline6.cc    
   src/linear_spline_equations.cc
   # endeffector
   src/ee_phase_motion.cc
@@ -92,6 +91,7 @@ add_library(${MOTION_OPT_LIB}
   src/dynamic_constraint.cc
   src/foothold_constraint.cc
   src/polynomial_cost.cc
+#  src/com_spline6.cc    
 #  src/ellipse.cc
 #  src/com_spline4.cc
 #  src/convexity_constraint.cc
