removed polygon_center_constraint and setup working walk/trott test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,7 +84,7 @@ add_library(${MOTION_OPT_LIB}
   src/linear_constraint.cc
   src/cost_constraint_factory.cc
   src/range_of_motion_constraint.cc
-  src/polygon_center_constraint.cc
+#  src/polygon_center_constraint.cc
   src/dynamic_constraint.cc
   src/foothold_constraint.cc
   src/polynomial_cost.cc
