finished chaning poly helpers to class spline

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,7 @@ add_library(${MOTION_OPT_LIB}
   src/linear_inverted_pendulum.cc
   src/motion_optimizer_facade.cc
   src/polynomial.cc
+  src/spline.cc
   src/base_motion.cc
   src/com_spline.cc
   src/linear_spline_equations.cc
